deployment/peakblock-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: peakblock-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - peakblock.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: peakblock.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: peakblockfrontend
          servicePort: 5000
        path: /(.*)
